@@ -1,3 +1,8 @@
+2011-12-11  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/50923
+	* gfortran.dg/warn_function_without_result_2.f90: New.
+
 2011-12-11  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	PR fortran/51338
